# NW-Crawler

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.jupyter
notebooks/: ArticleRepository.ipynb  notebook.ipynb
notebooks/databases/: test.sqbpro
src/nwcrawler/: __init__.py  __main__.py  config.py  exceptions.py
src/nwcrawler/database/: connection.py  repositories.py
src/nwcrawler/scraping/: crawler.py  parsing.py
src/nwcrawler/utils/: helpers.py
